implementacio de dades + canvis a la db + alguns canvis de codi

--- a/src/projecte/company_view.fxml
+++ b/src/projecte/company_view.fxml
@@ -1,43 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-  This file is available and licensed under the following license:
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="projecte.CompanyController">
 
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
+    <top>
+        <VBox spacing="10" BorderPane.alignment="CENTER">
+            <Label text="EMPRESES" />
+            <ComboBox fx:id="degreeFilterComboBox" promptText="Filtra per grau (Tots)">
+                <!-- Els ítems es carregaran des del controlador -->
+            </ComboBox>
+        </VBox>
+    </top>
 
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
+    <center>
+        <TableView fx:id="companyTable">
+            <columns>
+                <TableColumn fx:id="colId" text="ID"/>
+                <TableColumn fx:id="colName" text="Nom"/>
+                <TableColumn fx:id="colDescription" text="Descripció"/>
+                <TableColumn fx:id="colDegreeId" text="Grau"/>
+            </columns>
+        </TableView>
+    </center>
 
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
+    <bottom>
+    <HBox spacing="10">
+        <padding>
+            <Insets top="10" right="10" bottom="10" left="10"/>
+        </padding>
+        <TextField fx:id="txtId" promptText="ID"/>
+        <TextField fx:id="txtName" promptText="Nom"/>
+        <TextField fx:id="txtDescription" promptText="Descripció"/>
+        <TextField fx:id="txtDegreeId" promptText="ID Grau"/>
+        <Button text="Afegir" onAction="#addCompany"/>
+    </HBox>
+</bottom>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <Label text="EMPRESES" BorderPane.alignment="CENTER" />
-   </top>
 </BorderPane>
