--- a/src/projecte/company_view.fxml
+++ b/src/projecte/company_view.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="projecte.CompanyController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projecte.CompanyController">
 
     <top>
         <VBox spacing="10" BorderPane.alignment="CENTER">
@@ -19,10 +25,10 @@
     <center>
         <TableView fx:id="companyTable">
             <columns>
-                <TableColumn fx:id="colId" text="ID"/>
-                <TableColumn fx:id="colName" text="Nom"/>
-                <TableColumn fx:id="colDescription" text="Descripció"/>
-                <TableColumn fx:id="colDegreeId" text="Grau"/>
+                <TableColumn fx:id="colId" text="ID" />
+                <TableColumn fx:id="colName" text="Nom" />
+                <TableColumn fx:id="colDescription" text="Descripció" />
+                <TableColumn fx:id="colDegreeId" text="Grau" />
             </columns>
         </TableView>
     </center>
@@ -30,13 +36,13 @@
     <bottom>
     <HBox spacing="10">
         <padding>
-            <Insets top="10" right="10" bottom="10" left="10"/>
+            <Insets bottom="10" left="10" right="10" top="10" />
         </padding>
-        <TextField fx:id="txtId" promptText="ID"/>
-        <TextField fx:id="txtName" promptText="Nom"/>
-        <TextField fx:id="txtDescription" promptText="Descripció"/>
-        <TextField fx:id="txtDegreeId" promptText="ID Grau"/>
-        <Button text="Afegir" onAction="#addCompany"/>
+        <TextField fx:id="txtId" promptText="ID" />
+        <TextField fx:id="txtName" promptText="Nom" />
+        <TextField fx:id="txtDescription" promptText="Descripció" />
+        <TextField fx:id="txtDegreeId" promptText="ID Grau" />
+        <Button onAction="#addCompany" text="Afegir" />
     </HBox>
 </bottom>
 
