--- a/src/projecte/company_view.fxml
+++ b/src/projecte/company_view.fxml
@@ -43,6 +43,8 @@
         <TextField fx:id="txtDescription" promptText="Descripció" />
         <TextField fx:id="txtDegreeId" promptText="ID Grau" />
         <Button onAction="#addCompany" text="Afegir" />
+        <Button onAction="#deleteCompany" text="Eliminar" />
+        
     </HBox>
 </bottom>
 
